<resources>
    <string name="app_name">GitHub client</string>

    <string name="repository_list_item_language">Language: %s</string>
    <string name="repository_list_item_accessibility_avatar">Authors avatar image</string>
    <string name="repository_list_item_accessibility_starts_count">Stars count image</string>
    <string name="repository_list_item_accessibility_forks_count">Forks count image</string>

    <string name="repository_list_item_load_state_view_button_retry_request">Retry</string>

    <string name="activity_home_confirm_exit">Please click BACK again to exit</string>

    <string name="fragment_repositories_search_hint">GitHub repositories</string>
    <string name="fragment_repositories_button_retry_request">Retry</string>
    <string name="fragment_repositories_no_results_found">No results found</string>

    <string name="fragment_repository_details_button_retry_request">Retry</string>
</resources>