<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.RepositoriesFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_search_repository"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_repositories_search_input_margin"
        android:layout_marginTop="@dimen/fragment_repositories_search_input_margin"
        android:layout_marginEnd="@dimen/fragment_repositories_search_input_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edittext_search_repository"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_repositories_search_hint"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:selectAllOnFocus="true"
            tools:text="Android" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_repositories"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinputlayout_search_repository"
        tools:ignore="UnusedAttribute" />

    <ProgressBar
        android:id="@+id/progressbar_repository_load_state"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_empty_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/fragment_repositories_empty_list_message_size"
        android:text="@string/fragment_repositories_no_results_found"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textinputlayout_search_repository"
        tools:text="@string/fragment_repositories_no_results_found"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_retry_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_repositories_button_retry_request"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_request_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/fragment_repositories_request_error_message_size"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button_retry_request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Unable to resolve host api.github.com: No address associated with hostname"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>